AEA-1032: Make spec visible on PR branches.

--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -63,6 +63,7 @@ extends:
           - template: ./templates/run-integration-tests.yml
             parameters:
               service_name: ${{ variables.service_name }}
+        make_spec_visible: true
       - environment: internal-dev
         service_name: ${{ variables.service_name }}-int
         short_service_name: ${{ variables.short_service_name }}-int
