--- a/azure/project.yml
+++ b/azure/project.yml
@@ -4,4 +4,4 @@ variables:
   service_base_path: oauth2
   product_display_name: Identity Service
   product_description: Placeholder description
-
+  spec_file: identity-service.json
