--- a/azure/project.yml
+++ b/azure/project.yml
@@ -3,5 +3,5 @@ variables:
   short_service_name: ids
   service_base_path: oauth2
   product_display_name: Identity Service
-  product_description: Placeholder description
+  product_description: " "
   spec_file: identity-service.json
