refactored token-exchange & tests

--- a/api_tests/tests/pytest.ini
+++ b/api_tests/tests/pytest.ini
@@ -10,6 +10,7 @@ markers =
     callback_endpoint:  associated with the /callback endpoint
     token_refresh: checking the tokens behaviour
     env: a reference to the Jira ticket number e.g. test_id(750)
+    token_exchange
 
     # Jira APM tickets included
     apm_801: a reference to the Jira ticket this test belongs to
@@ -26,3 +27,6 @@ markers =
     apm_1631
     apm_1475
     aea_756
+    amb_514
+    
+
