added env varables in pipeline

--- a/azure/templates/run-integration-tests.yml
+++ b/azure/templates/run-integration-tests.yml
@@ -33,6 +33,7 @@ steps:
       export MISSING_ASID_CLIENT_ID="$(INTERNAL_TESTING_WITHOUT_ASID_KEY)"
       export MISSING_ASID_CLIENT_SECRET="$(INTERNAL_TESTING_WITHOUT_ASID_SECRET)"
       export PRIVATE_KEY_DIR="$(Pipeline.Workspace)/secrets/$(JWT_TESTING_PRIVATE_KEY)"
+      export ID_TOKEN_PRIVATE_KEY_DIR="$(Pipeline.Workspace)/secrets/$(ID_TOKEN_TESTING_PRIVATE_KEY)"
       export JWT_APP_KEY="$(JWT_TESTING_API_KEY)"
       export VALID_UNSUBSCRIBED_CLIENT_ID="$(VALID_UNSUBSCRIBED_CLIENT_ID)"
       export VALID_UNSUBSCRIBED_CLIENT_SECRET="$(VALID_UNSUBSCRIBED_CLIENT_SECRET)"
