--- a/api_tests/tests/pytest.ini
+++ b/api_tests/tests/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 addopts = --strict-markers -v
-python_classes = Test*Suite
+python_classes = Test*
 junit_family=xunit1
 markers =
     errors: checks against error conditions
