--- a/api_tests/pyproject.toml
+++ b/api_tests/pyproject.toml
@@ -10,6 +10,7 @@ requests = "^2.25.0"
 pytest = "^6.1.2"
 pytest-xdist = "^2.1.0"
 pytest-sugar = "^0.9.4"
+api-test-utils = {url = "https://github.com/NHSDigital/apim-test-utils/releases/download/v1.0.71-alpha/api_test_utils-1.0.71a0-py3-none-any.whl"}
 
 [tool.poetry.dev-dependencies]
 
