--- a/azure/templates/run-integration-tests.yml
+++ b/azure/templates/run-integration-tests.yml
@@ -14,7 +14,7 @@ steps:
   - bash: |
       source ./test_env/bin/activate
 
-      export OAUTH_BASE_URL="https://$(APIGEE_ENVIRONMENT).api.service.nhs.uk"
+      export OAUTH_BASE_URI="https://$(APIGEE_ENVIRONMENT).api.service.nhs.uk"
       export OAUTH_PROXY="$(SERVICE_BASE_PATH)"
       export CLIENT_ID="$(CLIENT_ID)"
       export CLIENT_SECRET="$(CLIENT_SECRET)"
