--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -36,9 +36,9 @@ extends:
     product_description: ${{ variables.product_description }}
     ping: false
     jinja_templates:
-      IDENTITY_TARGET_SERVER: identity-server
-      VARIABLES_KVM: identity-service-variables
-      ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
+      IDENTITY_TARGET_SERVER: identity-server-DEV
+      VARIABLES_KVM: identity-service-internal-dev-DEV-variables
+      ENCRYPTED_VARIABLES_KVM: identity-service-internal-dev-DEV-variables-encrypted
       NUM_RANDOM_LONG_INTS_FOR_STATE: 4
     secret_file_ids:
       - ptl/app-credentials/jwt_testing/non-prod/JWT_TESTING_PRIVATE_KEY
