--- a/.github/workflows/pr-lint.yaml
+++ b/.github/workflows/pr-lint.yaml
@@ -8,7 +8,7 @@ jobs:
         run: echo ${{ github.event.pull_request.head.ref }} | grep -i -E -q "((amb|apm|apmspii)-[0-9]+)|(dependabot\/)"
 
       - name: Grab ticket name
-        if: contains(github.event.pull_request.head.ref, 'apm-') || contains(github.event.pull_request.head.ref, 'APM-') || contains(github.event.pull_request.head.ref, 'amb-') || contains(github.event.pull_request.head.ref, 'AMB-') || contains(github.event.pull_request.head.ref, 'apmspii-') contains(github.event.pull_request.head.ref, 'APMSPII-')
+        if: contains(github.event.pull_request.head.ref, 'apm-') || contains(github.event.pull_request.head.ref, 'APM-') || contains(github.event.pull_request.head.ref, 'amb-') || contains(github.event.pull_request.head.ref, 'AMB-') || contains(github.event.pull_request.head.ref, 'apmspii-') || contains(github.event.pull_request.head.ref, 'APMSPII-')
         run: echo ::set-env name=TICKET_NAME::$(echo ${{ github.event.pull_request.head.ref }} | tr '[:lower:]' '[:upper:]' | grep -i -o '\(^APM-[0-9]\+\)\|\(^APMSPII-[0-9]\+\)'
         env:
           ACTIONS_ALLOW_UNSECURE_COMMANDS: true
