AMB-517 point to dev target

--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -36,19 +36,19 @@ extends:
     product_description: ${{ variables.product_description }}
     ping: false
     jinja_templates:
-      IDENTITY_TARGET_SERVER: identity-server
-      VARIABLES_KVM: identity-service-variables
-      ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
+      IDENTITY_TARGET_SERVER: identity-server-DEV
+      VARIABLES_KVM: identity-service-variables-pr-155
+      ENCRYPTED_VARIABLES_KVM: identity-service-internal-dev-DEV-variables-encrypted
       NUM_RANDOM_LONG_INTS_FOR_STATE: 4
     secret_file_ids:
       - ptl/app-credentials/jwt_testing/non-prod/JWT_TESTING_PRIVATE_KEY
       - ptl/app-credentials/jwt_testing/non-prod/ID_TOKEN_TESTING_PRIVATE_KEY
     apigee_deployments:
       - environment: internal-dev
-        post_deploy:
-          - template: ./templates/run-integration-tests.yml
-            parameters:
-              service_name: ${{ variables.service_name }}
+#        post_deploy:
+#          - template: ./templates/run-integration-tests.yml
+#            parameters:
+#              service_name: ${{ variables.service_name }}
       - environment: internal-dev
         service_name: ${{ variables.service_name }}-int
         short_service_name: ${{ variables.short_service_name }}-int
