--- a/azure/azure-release-pipeline.yml
+++ b/azure/azure-release-pipeline.yml
@@ -34,7 +34,7 @@ extends:
     product_description: ${{ variables.product_description }}
     enable_monitoring: true
     jinja_templates:
-      IDENTITY_PROVIDER_CIS2: identity-server
+      IDENTITY_PROVIDER_CIS2: cis2
       IDENTITY_PROVIDER_NHS_LOGIN: nhs-login
       VARIABLES_KVM: identity-service-variables
       ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
@@ -61,7 +61,7 @@ extends:
         fully_qualified_service_name: identity-service-int-no-smartcard
         service_base_path: oauth2-no-smartcard
         jinja_templates:
-          IDENTITY_PROVIDER_CIS2: identity-server-no-smartcard
+          IDENTITY_PROVIDER_CIS2: cis2-no-smartcard
           IDENTITY_PROVIDER_NHS_LOGIN: nhs-login
           VARIABLES_KVM: identity-service-variables-no-smartcard
           ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted-no-smartcard
