--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -38,7 +38,7 @@ extends:
     jinja_templates:
       IDENTITY_PROVIDER_CIS2: cis2
       IDENTITY_PROVIDER_NHS_LOGIN: nhs-login
-      VARIABLES_KVM: identity-service-variables
+      VARIABLES_KVM: identity_service_config
       ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
       NUM_RANDOM_LONG_INTS_FOR_STATE: 4
     apigee_deployments:
@@ -56,6 +56,6 @@ extends:
         jinja_templates:
           IDENTITY_PROVIDER_CIS2: cis2-int
           IDENTITY_PROVIDER_NHS_LOGIN: nhs-login
-          VARIABLES_KVM: identity-service-internal-dev-int-variables
+          VARIABLES_KVM: identity_service_config_int
           ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
           NUM_RANDOM_LONG_INTS_FOR_STATE: 4
