--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -36,10 +36,10 @@ extends:
     product_description: ${{ variables.product_description }}
     ping: false
     jinja_templates:
-      IDENTITY_PROVIDER_CIS2: cis2
+      IDENTITY_PROVIDER_CIS2: cis2-DEV
       IDENTITY_PROVIDER_NHS_LOGIN: nhs-login
       VARIABLES_KVM: identity-service-internal-dev-DEV-variables
-      ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
+      ENCRYPTED_VARIABLES_KVM: identity-service-internal-dev-DEV-variables-encrypted
       NUM_RANDOM_LONG_INTS_FOR_STATE: 4
     apigee_deployments:
       - environment: internal-dev
