--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -36,17 +36,17 @@ extends:
     product_description: ${{ variables.product_description }}
     ping: false
     jinja_templates:
-      IDENTITY_PROVIDER_CIS2: cis2
+      IDENTITY_PROVIDER_CIS2: cis2-DEV
       IDENTITY_PROVIDER_NHS_LOGIN: nhs-login
-      VARIABLES_KVM: identity_service_config
-      ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
+      VARIABLES_KVM: identity_service_config_pr_158
+      ENCRYPTED_VARIABLES_KVM: identity-service-internal-dev-DEV-variables-encrypted
       NUM_RANDOM_LONG_INTS_FOR_STATE: 4
     apigee_deployments:
       - environment: internal-dev
-        post_deploy:
-          - template: ./templates/run-integration-tests.yml
-            parameters:
-              service_name: ${{ variables.service_name }}
+        # post_deploy:
+        #   - template: ./templates/run-integration-tests.yml
+        #     parameters:
+        #       service_name: ${{ variables.service_name }}
       - environment: internal-dev
         service_name: ${{ variables.service_name }}-int
         short_service_name: ${{ variables.short_service_name }}-int
