--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -59,3 +59,16 @@ extends:
           VARIABLES_KVM: identity_service_config_int
           ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
           NUM_RANDOM_LONG_INTS_FOR_STATE: 4
+      - environment: internal-qa
+#      - environment: internal-qa
+#        service_name: ${{ variables.service_name }}-int
+#        short_service_name: ${{ variables.short_service_name }}-int
+#        product_display_name: ${{ variables.product_display_name }} (INT Testing)
+#        stage_name: internal_qa_int
+#        service_base_path: ${{ variables.service_base_path }}-int
+#        jinja_templates:
+#           IDENTITY_PROVIDER_CIS2: cis2-int
+#           IDENTITY_PROVIDER_NHS_LOGIN: nhs-login
+#           VARIABLES_KVM: identity_service_config_int
+#           ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
+#           NUM_RANDOM_LONG_INTS_FOR_STATE: 4
