--- a/azure/azure-release-pipeline.yml
+++ b/azure/azure-release-pipeline.yml
@@ -49,6 +49,18 @@ extends:
       - environment: internal-qa
         depends_on:
           - internal_dev
+      - environment: internal-qa
+        depends_on:
+          - internal_dev
+        stage_name: internal_qa_smartcard
+        fully_qualified_service_name: identity-service-internal-qa-int
+        service_base_path: ${{ variables.service_base_path }}-int
+        jinja_templates:
+          IDENTITY_PROVIDER_CIS2: cis2-int
+          IDENTITY_PROVIDER_NHS_LOGIN: nhs-login
+          VARIABLES_KVM: identity_service_config_int
+          ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
+          NUM_RANDOM_LONG_INTS_FOR_STATE: 4
       - environment: internal-qa-sandbox
         depends_on:
           - internal_dev
