--- a/manifest_template.yml
+++ b/manifest_template.yml
@@ -58,6 +58,9 @@ apigee:
 {% if ENV.name == 'int' %}
           - identity-service-int-no-smartcard
 {% endif %}
+{% if ENV.name == 'internal-qa' %}
+          - identity-service-internal-qa-int
+{% endif %}
         scopes:
           - 'urn:nhsd:apim:app:level3:identity-service'
           - 'urn:nhsd:apim:user-nhs-id:aal3:identity-service'
