--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -43,10 +43,10 @@ extends:
       NUM_RANDOM_LONG_INTS_FOR_STATE: 4
     apigee_deployments:
       - environment: internal-dev
-        # post_deploy:
-        #   - template: ./templates/run-integration-tests.yml
-        #     parameters:
-        #       test_type: e2e
+        post_deploy:
+          - template: ./templates/run-integration-tests.yml
+            parameters:
+              test_type: e2e
       - environment: internal-dev
         service_name: ${{ variables.service_name }}-int
         short_service_name: ${{ variables.short_service_name }}-int
