--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ pytest-asyncio = "^0.14.0"
 coverage = "^5.3"
 pytest-xdist = "^2.1.0"
 pytest-sugar = "^0.9.4"
-api-test-utils = {url = "https://github.com/NHSDigital/apim-test-utils/releases/download/v1.1.6-alpha/api_test_utils-1.1.6a0-py3-none-any.whl"}
+api-test-utils = {git = "https://github.com/NHSDigital/apim-test-utils.git", branch = "AMB-737-point-to-mock-proxy-instead-of-simulated-auth"}
 python-dotenv = "^0.17.1"
 
 [tool.poetry.scripts]
