--- a/azure/azure-release-pipeline.yml
+++ b/azure/azure-release-pipeline.yml
@@ -33,6 +33,7 @@ extends:
     product_display_name: ${{ variables.product_display_name }}
     product_description: ${{ variables.product_description }}
     enable_monitoring: true
+    enable_status_monitoring: false
     jinja_templates:
       IDENTITY_PROVIDER_CIS2: cis2
       IDENTITY_PROVIDER_NHS_LOGIN: nhs-login
