--- a/e2e/pytest.ini
+++ b/e2e/pytest.ini
@@ -18,6 +18,8 @@ markers =
     interaction_id: checking the interaction ID value
     spine_headers: checking the spine headers are correct
     debug: use this to run one single test
+    debug1: use this to run one single test
+    debug2: use this to run one single test
     integration: integration testing
     sandbox: sandbox specific tests
     auth: temporary test spine auth
