AMB-776 debug test variables

--- a/azure/templates/run-integration-tests.yml
+++ b/azure/templates/run-integration-tests.yml
@@ -43,6 +43,10 @@ steps:
       export JWT_PRIVATE_KEY_ABSOLUTE_PATH="$(Pipeline.Workspace)/secrets/$(JWT_TESTING_PRIVATE_KEY)"
       export APIGEE_API_TOKEN="$(secret.AccessToken)"
       export ACCESS_TOKEN_SECRET="$(ACCESS_TOKEN_SECRET)"
+      echo $OAUTH_BASE_URI
+      echo $OAUTH_PROXY
+      echo $ACCESS_TOKEN_SECRET
+      echo $APIGEE_API_TOKEN
       make -C e2e ${{ parameters.test_type }}
     workingDirectory: $(SERVICE_DIR)
     displayName: run ${{ parameters.test_type }} tests
