--- a/azure/templates/run-integration-tests.yml
+++ b/azure/templates/run-integration-tests.yml
@@ -29,9 +29,10 @@ steps:
           - ptl/app-credentials/jwt_testing/non-prod/JWT_TESTING_PRIVATE_KEY
           - ptl/app-credentials/jwt_testing/non-prod/ID_TOKEN_TESTING_PRIVATE_KEY
           - ptl/app-credentials/jwt_testing/non-prod/ID_TOKEN_NHS_LOGIN_PRIVATE_KEY
-          - ptl/app-credentials/identity-service/non-prod/ACCESS_TOKEN_SECRET
         config_ids: []
-        secret_ids: []
+        secret_ids: 
+          - ptl/app-credentials/identity-service/non-prod/ACCESS_TOKEN_SECRET
+
 
   - bash: |
 
