AMB-776 remove debug tags and cleanup

--- a/e2e/pytest.ini
+++ b/e2e/pytest.ini
@@ -18,14 +18,13 @@ markers =
     interaction_id: checking the interaction ID value
     spine_headers: checking the spine headers are correct
     debug: use this to run one single test
-    debug1: use this to run one single test
-    debug2: use this to run one single test
     integration: integration testing
     sandbox: sandbox specific tests
     auth: temporary test spine auth
     logging: splunk logging tests
 
     # Jira AMB tickets included
+    amb_776
     apm_1521
     apm_801
     apm_801
