--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -55,9 +55,9 @@ extends:
         stage_name: internal_dev_int
         service_base_path: ${{ variables.service_base_path }}-int
         jinja_templates:
-          IDENTITY_PROVIDER_CIS2: cis2-int
+          IDENTITY_PROVIDER_CIS2: cis2
           IDENTITY_PROVIDER_NHS_LOGIN: nhs-login
-          VARIABLES_KVM: identity_service_config_int
+          VARIABLES_KVM: identity_service_config_keycloak
           ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
           NUM_RANDOM_LONG_INTS_FOR_STATE: 4
           RATELIMITING: ${{ variables.ratelimiting }}
