--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ keywords = ["healthcare", "uk", "nhs"]
 [tool.poetry.dependencies]
 python = "^3.8"
 pytest-rerunfailures = "^10.0"
+beautifulsoup4 = "^4.10.0"
+selenium = "^4.0.0"
 
 
 [tool.poetry.dev-dependencies]
