--- a/e2e/tests/docker-compose.yml
+++ b/e2e/tests/docker-compose.yml
@@ -2,6 +2,6 @@ version: "3"
 services:
   chromedriver:
     image: selenium/standalone-chrome:4.0.0-20211025
-    container_name: selenium
+    container_name: chromedriver
     ports:
       - "4444:4444"
