APM-0000 Correct crate name

--- a/.github/workflows/version-tag.yml
+++ b/.github/workflows/version-tag.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Install autover
         uses: actions-rs/install@v0.1
         with:
-          create: autover
+          crate: autover
           version: latest
           use-tool-cache: true
 
