APM-0000 Update to safer env set syntax

--- a/.github/workflows/version-tag.yml
+++ b/.github/workflows/version-tag.yml
@@ -28,9 +28,7 @@ jobs:
         run: ./autover fetch
 
       - name: Set SPEC_VERSION env var
-        run: echo ::set-env name=SPEC_VERSION::v$(./autover)
-        env:
-          ACTIONS_ALLOW_UNSECURE_COMMANDS: true
+        run: echo SPEC_VERSION=v$(./autover) >> $GITHUB_ENV
 
       # - name: Create release (master only)
       #   id: create-release
