--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,8 +38,8 @@ pytest-asyncio = "^0.14.0"
 coverage = "^5.3"
 pytest-xdist = "^2.1.0"
 pytest-sugar = "^0.9.4"
-api-test-utils = {url = "https://github.com/NHSDigital/apim-test-utils/releases/download/v1.1.12-alpha/api_test_utils-1.1.12a0-py3-none-any.whl"}
-#api-test-utils = {path = "../apim-test-utils/dist/api_test_utils-0.0.0-py3-none-any.whl"}
+#api-test-utils = {url = "https://github.com/NHSDigital/apim-test-utils/releases/download/v1.1.12-alpha/api_test_utils-1.1.12a0-py3-none-any.whl"}
+api-test-utils = {path = "../apim-test-utils/dist/api_test_utils-0.0.0-py3-none-any.whl"}
 python-dotenv = "^0.17.1"
 PyJWT = "^2.3.0"
 cryptography = "^3.3.1"
