--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -34,9 +34,9 @@ extends:
     service_base_path: ${{ variables.service_base_path }}
     ping: false
     jinja_templates:
-      IDENTITY_PROVIDER_CIS2: cis2-keycloak
+      IDENTITY_PROVIDER_CIS2: cis2
       IDENTITY_PROVIDER_NHS_LOGIN: nhs-login
-      VARIABLES_KVM: identity_service_config_keycloak
+      VARIABLES_KVM: identity_service_config
       ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
       NUM_RANDOM_LONG_INTS_FOR_STATE: 4
       RATELIMITING: ${{ variables.ratelimiting }}
@@ -54,7 +54,7 @@ extends:
         jinja_templates:
           IDENTITY_PROVIDER_CIS2: cis2-int
           IDENTITY_PROVIDER_NHS_LOGIN: nhs-login
-          VARIABLES_KVM: identity_service_config_keycloak
+          VARIABLES_KVM: identity_service_config
           ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
           NUM_RANDOM_LONG_INTS_FOR_STATE: 4
           RATELIMITING: ${{ variables.ratelimiting }}
