APM-2521 Fix duplicate step name

--- a/azure/templates/run-integration-tests.yml
+++ b/azure/templates/run-integration-tests.yml
@@ -23,7 +23,7 @@ steps:
       location: '.venv'
       debug: true
       workingDirectory: $(SERVICE_DIR)/e2e
-    name: poetryCache
+    name: poetryCacheTest
     displayName: cache python dependencies (test)
 
   - bash: |
