--- a/e2e/pyproject.toml
+++ b/e2e/pyproject.toml
@@ -27,6 +27,8 @@ pytest-xdist = "^2.4.0"
 pytest-sugar = "^0.9.4"
 api-test-utils = {url = "https://github.com/NHSDigital/apim-test-utils/releases/download/v1.1.12-alpha/api_test_utils-1.1.12a0-py3-none-any.whl"}
 python-dotenv = "^0.19.1"
+selenium = "^4.0.0"
+pytest-docker = "^0.10.3"
 
 [tool.poetry.dev-dependencies]
 
