--- a/pytest.ini
+++ b/pytest.ini
@@ -11,6 +11,7 @@ markers =
     token_refresh: checking the tokens behaviour
     env: a reference to the Jira ticket number e.g. test_id(750)
     token_exchange
+    logging: splunk logging tests
 
     # Jira APM tickets included
     apm_801: a reference to the Jira ticket this test belongs to
@@ -29,3 +30,4 @@ markers =
     aea_756
     amb_514
     apm_1701
+    apm_2573
