Fixed expected objects in token response

--- a/pytest.ini
+++ b/pytest.ini
@@ -12,6 +12,7 @@ markers =
     env: a reference to the Jira ticket number e.g. test_id(750)
     token_exchange
     logging: splunk logging tests
+    debug: run this test only
 
     # Jira APM tickets included
     apm_801: a reference to the Jira ticket this test belongs to
