--- a/manifest_template.yml
+++ b/manifest_template.yml
@@ -5,27 +5,18 @@
 #   $ DIST_DIR=/path/to/this/repo make template-manifest
 #
 #
+# Currently identity-service requires no products/specs/api_catalog entries.
+#
 APIGEE_ENVIRONMENTS:
-- display_name: Internal Development
-  name: internal-dev
-- display_name: Internal Development Sandbox
-  name: internal-dev-sandbox
-- display_name: Internal QA
-  name: internal-qa
-- display_name: Internal QA Sandbox
-  name: internal-qa-sandbox
-- display_name: Reference
-  name: ref
-  rate_limit: 300000
-- display_name: Sandbox
-  name: sandbox
-- display_name: Integration Testing
-  name: int
-- display_name: Development
-  name: dev
-- approval_type: manual
-  display_name: Production
-  name: prod
+- name: internal-dev
+- name: internal-dev-sandbox
+- name: internal-qa
+- name: internal-qa-sandbox
+- name: ref
+- name: sandbox
+- name: int
+- name: dev
+- name: prod
 ---
 meta:
   api:
@@ -37,36 +28,8 @@ apigee:
   environments:
 
 {% for ENV in APIGEE_ENVIRONMENTS %}
-{% set TITLE = 'Identity Service (' + ENV.display_name + ')' %}
-{% set DESCRIPTION = 'Identity Service - ' + ENV.display_name | lower + ' environment' %}
-{% set NAME = 'identity-service-' + ENV.name %}
   - name: {{ ENV.name }}
-    products:
-      - name: {{ NAME }}
-        approvalType: {{ ENV.approval_type | default('auto') }}
-        attributes:
-          - name: access
-            value: public
-          - name: ratelimit
-            value: {{ ENV.rate_limit | default('6000') }}pm
-
-        description: {{ DESCRIPTION }}
-        displayName: {{ TITLE }}
-        environments: [ {{ ENV.name }} ]
-        proxies:
-          - identity-service-{{ ENV.name }}
-{% if ENV.name == 'int' %}
-          - identity-service-int-no-smartcard
-{% endif %}
-{% if ENV.name == 'internal-qa' %}
-          - identity-service-internal-qa-int
-{% endif %}
-        scopes:
-          - 'urn:nhsd:apim:app:level3:identity-service'
-          - 'urn:nhsd:apim:user-nhs-id:aal3:identity-service'
-        quota: {{ ENV.rate_limit | default('6000') }}
-        quotaInterval: 1
-        quotaTimeUnit: minute
+    products: []
     specs: []
     api_catalog: []
 {% endfor %}
